[gd_scene load_steps=5 format=3 uid="uid://dlul2gx754mk6"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_w6a2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4auvh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tblws"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tb3j"]
bg_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6a2k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4auvh")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_top = 0.17824
anchor_right = 0.667
anchor_bottom = 0.277944
offset_right = -0.426331
offset_bottom = 0.102539
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Delivery Guy"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.833
anchor_right = 0.2
anchor_bottom = 0.951389
offset_top = 0.239929
grow_vertical = 0
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_tblws")
text = "High Score
0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_top = 0.592593
anchor_right = 0.666667
anchor_bottom = 0.79321
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4tb3j")
text = "Start"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4tb3j")
text = "Exit
"

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
